Web Inspector: Scripts timeline on-going-recording text looks poor in dark mode https://bugs.webkit.org/show_bug.cgi?id=194809
Patch by Joseph Pecoraro <pecoraro@apple.com> on 2019-02-19
Reviewed by Matt Baker.

* UserInterface/Views/TimelineRecordingContentView.css:
(.content-view.timeline-recording > .content-browser .recording-progress > .status):

Canonical link: https://commits.webkit.org/209188@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241757 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/TimelineRecordingContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/TimelineRecordingContentView.css
@@ -77,7 +77,7 @@
     margin-bottom: 10px;
     text-align: center;
     font-size: 12px;
-    color: hsl(0, 0%, 12%);
+    color: var(--text-color-secondary)
 }
 
 .content-view.timeline-recording > .content-browser .recording-progress > .status > .indeterminate-progress-spinner {
